--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-SECRET=Itismysecret.
+GOOGLE_CLIENTID=1095932103715-trg0junqgiltsoibvvi5aglmck56nbbs.apps.googleusercontent.com
+GOOGLE_CLIENTSECRET=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
+
+FACEBOOK_CLIENTID=947276503259677
+FACEBOOK_CLIENTSECRET=8498be8c4287a1e3f5ec80a3c0d057d5
